@@ -3,6 +3,9 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Blacklist "__gnu_local_gp" symbol for dpkg-gensymbols. Closes: #500188
     Thanks to Thiemo Seufer <ths@debian.org>.
+  * Important bugfix in dpkg-gensymbols for people using includes in symbol
+    files: the current object didn't flow back from the included file to
+    the including file.
 
   [ Updated dpkg translations ]
   * Greek (Emmanuel Galatoulas). Closes: #498585
