@@ -1,3 +1,10 @@
+2008-10-20  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/SymbolFile.pm (load): Let the recursively
+	nested calls to load() modify the name of the current object so
+	that the header can be set in an included file (like it's already
+	documented).
+
 2008-09-26  Thiemo Seufer  <ths@debian.org>
 
 	* scripts/Dpkg/Shlibs/SymbolFile.pm: add "__gnu_local_gp" symbol
